kelas istio/02. Traffic management/e. traffic mirroring/review/review-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: review-vs
  namespace: default
spec:
  hosts:
  - review.default.svc.cluster.local
  http:
  - name: "route"
    route:
    - destination:
        host: review.default.svc.cluster.local
        subset: v1
      weight: 100
    mirror:
      host: review.default.svc.cluster.local
      subset: v2
    mirrorPercentage:
      value: 100
